--- a/lib/premiere_ecoute_web/components/layouts/root.html.heex
+++ b/lib/premiere_ecoute_web/components/layouts/root.html.heex
@@ -13,7 +13,7 @@
     </script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js">
     </script>
-    <script>
+    <script nonce={@script_src_nonce}>
       (() => {
         const setTheme = (theme) => {
           if (theme === "system") {
