--- a/lib/premiere_ecoute_web/live/homepage_live.html.heex
+++ b/lib/premiere_ecoute_web/live/homepage_live.html.heex
@@ -9,7 +9,9 @@
           <div class="w-full">
             <div class="text-center p-12">
               <h2 class="text-4xl font-bold text-white mb-4">
-                {gettext("Welcome back, %{username}!", username: @current_scope.user.twitch.username)}
+                {gettext("Welcome back, %{username}!",
+                  username: if(@current_scope.user.twitch == nil, do: "you", else: @current_scope.user.twitch.username)
+                )}
               </h2>
               <p class="text-xl" style="color: var(--color-dark-300);">
                 {gettext("Use the navigation panel on the left to access your activities and manage your sessions.")}
