--- a/lib/premiere_ecoute_web/live/accounts/account_live.html.heex
+++ b/lib/premiere_ecoute_web/live/accounts/account_live.html.heex
@@ -274,7 +274,7 @@
                           <div class="w-2 h-2 bg-green-400 rounded-full"></div>
                           <span class="text-green-400">{gettext("Token Active")}</span>
                         </div>
-                        <%= if @current_user.spotify do %>
+                        <%= if @current_user.spotify.expires_at do %>
                           <p class="text-gray-300 ml-4 text-xs">
                             {gettext("Expires")}: {Calendar.strftime(@current_user.spotify.expires_at, "%B %d, %Y at %I:%M:%S %p")}
                           </p>
@@ -300,7 +300,7 @@
                 </div>
               </div>
 
-              <%= if @current_user && @current_user.spotify do %>
+              <%= if @current_user && @current_user.spotify.access_token do %>
                 <button
                   phx-click="disconnect_spotify"
                   class="px-3 py-2 bg-red-600 hover:bg-red-700 text-white rounded-lg text-xs font-medium transition-colors border border-red-500/20 hover:border-red-400/30"
