--- a/lib/premiere_ecoute_web/live/admin/admin_albums_live.html.heex
+++ b/lib/premiere_ecoute_web/live/admin/admin_albums_live.html.heex
@@ -52,29 +52,12 @@
             <%= for album <- @page.entries do %>
               <tr class="hover:bg-gray-700 cursor-pointer" phx-click="show_album_modal" phx-value-album_id={album.id}>
                 <td class="px-6 py-4 whitespace-nowrap">
-                  <div class="flex items-center">
-                    <div class="flex-shrink-0 h-12 w-12">
-                      <%= if album.cover_url do %>
-                        <img class="h-12 w-12 rounded-lg object-cover" src={album.cover_url} alt={album.name} />
-                      <% else %>
-                        <div class="h-12 w-12 rounded-lg bg-gray-600 flex items-center justify-center">
-                          <svg class="w-6 h-6 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path
-                              stroke-linecap="round"
-                              stroke-linejoin="round"
-                              stroke-width="2"
-                              d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"
-                            />
-                          </svg>
-                        </div>
-                      <% end %>
-                    </div>
-                    <div class="ml-4">
-                      <div class="text-sm font-medium text-white">
-                        {album.name}
-                      </div>
-                    </div>
-                  </div>
+                  <!-- AIDEV-NOTE: Using new AlbumDisplay component for consistent album presentation -->
+                  <AlbumDisplay.album_display
+                    cover_url={album.cover_url}
+                    title={album.name}
+                    size="sm"
+                  />
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-300">
                   {album.artist}
